# bank-statement-rs

./: Cargo.toml  LICENSE  README.md
examples/: custom_transaction.rs  parse_csv.rs  parse_default.rs  parse_qfx.rs  sample.csv  sample.qfx
src/: builder.rs  errors.rs  lib.rs  types.rs
src/parsers/: mod.rs  prelude.rs  traits.rs
src/parsers/csv/: dto.rs  mod.rs  parser.rs  prelude.rs  types.rs
src/parsers/qfx/: dto.rs  mod.rs  parser.rs  prelude.rs  types.rs
