[package]
name = "bank-statement-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
thiserror = "2.0.17"

[dev-dependencies]
rstest = "0.26.1"
