[package]
name = "bank-statement-rs"
version = "0.1.0"
edition = "2024"
authors = ["Morgan Nicholson <nich.dev@pm.me>"]
description = "Rust library for parsing bank and credit card transaction history from multiple financial export formats"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nichmorgan/bank-statement-rs"
documentation = "https://docs.rs/bank-statement-rs"
readme = "README.md"
keywords = ["banking", "qfx", "ofx", "parser", "finance"]
categories = ["parser-implementations", "encoding"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
thiserror = "2.0.17"
csv = "1.3"
num-traits = "0.2"

[dev-dependencies]
rstest = "0.26.1"
